# SF.Boost.Geometry

./: CMakeLists.txt
examples/: CMakeLists.txt  boxes.cpp  invaders.cpp  shapes.cpp
include/: Box.hpp  Point.hpp  Shape.hpp
